--- a/src/test/resources/pang.properties
+++ b/src/test/resources/pang.properties
@@ -1,8 +1,8 @@
-## Prever.io reserved properties
-# Prever.io account and user key. Visit http://prever.io and you can see your user key in profile
-prever.username=
-prever.userkey=
+## Pangdata.com reserved properties
+# Pangdata.com account and user key. Visit http://Pangdata.com and you can see your user key in profile
+pang.username=
+pang.userkey=
 
 # Search schedule period(seconds)
-prever.period = 10
+pang.period = 10
 
