update step 4 - running example

--- a/pang-sdk-java/conf/pang.properties
+++ b/pang-sdk-java/conf/pang.properties
@@ -1,5 +1,5 @@
 #Prever.io reserved properties
-prever.username=your username in prever.io
-prever.userkey=your user key in prever.io
+pang.username={your username in pangdata.com}
+pang.userkey={your user key in pangdata.com}
 # Search schedule period(seconds)
-prever.period = 10
+pang.period = 10
