fix examples path

--- a/src/test/resources/pang.properties
+++ b/src/test/resources/pang.properties
@@ -1,7 +1,7 @@
 ## Pangdata.com reserved properties
 # Pangdata.com account and user key. Visit http://Pangdata.com and you can see your user key in profile
-pang.username=
-pang.userkey=
+pang.username={your username in pangdata.com}
+pang.userkey={your user key in pangdata.com}
 
 # Search schedule period(seconds)
 pang.period = 10
