--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,22 @@ ext {
 	pangVersion='1.0.0-SNAPSHOT'
 }
 
+sourceSets {
+    main {
+        java {
+            srcDirs = ["src/main/java", "examples"]
+        }
+    }
+    test {
+        java {
+            srcDirs = ["src/test/java"]
+        }
+        resources {
+            srcDirs = ["src/test/resources"]
+        }
+    }
+}
+
 configurations.all {
 	resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
 }
