Initalize default config.

--- a/src/test/resources/pang.properties
+++ b/src/test/resources/pang.properties
@@ -1,9 +1,5 @@
-## Pangdata.com reserved properties
-# Pangdata.com account and user key. Visit http://Pangdata.com and you can see your user key in profile
-pang.username= demo
-pang.userkey= 8KO-Vk
-
-pang.url = http://192.168.0.3:9191
-
+#Prever.io reserved properties
+pang.username={your username in pangdata.com}
+pang.userkey={your user key in pangdata.com}
 # Search schedule period(seconds)
 pang.period = 10
