Enhanced PangProperties and PangMqtt API.

--- a/src/test/resources/pang.properties
+++ b/src/test/resources/pang.properties
@@ -1,5 +1,6 @@
-#Prever.io reserved properties
+#Pangdata.com reserved properties. Fill your information.
 pang.username={your username in pangdata.com}
-pang.userkey={your user key in pangdata.com}
-# Search schedule period(seconds)
+pang.userkey={your userkey in pangdata.com}
+
+# Data sends period(seconds)
 pang.period = 10
