--- a/.gitignore
+++ b/.gitignore
@@ -12,13 +12,11 @@
 *.war
 *.ear
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
 /build
 /bin
-prever-sdk-java.tar
-prever-sdk-java.zip
+/logs
+/pang-sdk-java/logs
 pang-sdk-java.tar
 pang-sdk-java.zip
-/build
-/logs
+pang-sdk-java.tar
+pang-sdk-java.zip
