#3828 Paho client version upgrade using maven.

--- a/build.gradle
+++ b/build.gradle
@@ -48,7 +48,10 @@ dependencies {
 	compile group: 'commons-collections', name: 'commons-collections', version: '3.2'
 	compile 'com.fasterxml.jackson.core:jackson-databind:2.4.2'
 	
-	compile 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.0.2'
+	// Prever maven repository
+	//compile 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.0.2'
+	// Maven repository
+	compile group: 'org.eclipse.paho', name: 'org.eclipse.paho.client.mqttv3', version: '1.1.0'
 	compile 'org.apache.httpcomponents:httpclient:4.3.6'	
 	
 	testCompile 'junit:junit:4.11'
@@ -64,4 +67,3 @@ if (System.getProperty("target") == 'qa') {
 jar {
     manifest.attributes provider: 'pangdata.com'
 }
-
