--- a/src/test/resources/pang.properties
+++ b/src/test/resources/pang.properties
@@ -4,3 +4,7 @@ pang.userkey={your userkey in pangdata.com}
 
 # Data sends period(seconds)
 pang.period = 10
+
+pang.buffer = true
+pang.persist = true
+pang.clientId = pang-c2
